--- a/v/17/profiel.html
+++ b/v/17/profiel.html
@@ -44,11 +44,11 @@
                 class="h-card max-w-[1200px] lg:flex flex-row gap-20 flex-grow mr-5">
                 <section>
                     <img
-                        src="/v/17//geheimesite.nl/assets/images/me.jpeg"
+                        src="/v/17/assets/images/me.jpeg"
                         class="u-photo w-full"
                         alt="My 'professional' profile picture" />
                     <img
-                        src="/v/17//geheimesite.nl/assets/images/p-pixelart.png"
+                        src="/v/17/assets/images/p-pixelart.png"
                         hidden
                         class="u-logo w-full pixelart"
                         alt="Pixelart version of my face" />
