--- a/v/19/index.html
+++ b/v/19/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,30 +11,36 @@
     <title>Robin (axcelott)</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://roblog.nl" />
 
     <meta
       name="description"
       content="Hi. I'm Robin, also known as Axcelott. 
-      This is my lil' corner of the Web." />
+      This is my lil' corner of the Web."
+    />
 
     <link rel="icon" sizes="16x16" href="/v/19/favicon.ico" />
     <link rel="apple-touch-icon" sizes="16x16" href="/v/19/favicon.ico" />
@@ -135,10 +141,11 @@
         I like anything *NIX or BSD, I&#8217;m a sucker for functional
         programming and I enjoy listening to
         <a
-          href="/v/19//open.spotify.com/track/4blPH3Uy89WnOnYlIv7Ev4?si=4acba8eb53a3402c">
+          href="//open.spotify.com/track/4blPH3Uy89WnOnYlIv7Ev4?si=4acba8eb53a3402c"
+        >
           some good music</a
         >. I currently work at
-        <a href="/v/19//qdentity.nl" class="p-org">Qdentity</a> as
+        <a href="//qdentity.nl" class="p-org">Qdentity</a> as
         <span class="p-job-title">Junior Developer</span>.
       </p>
 
@@ -150,10 +157,10 @@
       <p>
         Some random facts about me: I have a cat called Coco (who apparently has
         an instagram profile:
-        <a href="/v/19//www.instagram.com/coconootje23/">@coconootje23</a>, go follow
+        <a href="//www.instagram.com/coconootje23/">@coconootje23</a>, go follow
         him!). I absolutely love Belgian waffles (but stroopwafels are nice
         too). I enjoy playing Minecraft. I&#8217;m very clumsy; I tend to
-        <a href="/v/19//manuelmoreale.com/the-beauty-of-broken-things">break</a>
+        <a href="//manuelmoreale.com/the-beauty-of-broken-things">break</a>
         things.
       </p>
 
@@ -172,7 +179,9 @@
       <p>
         <strong
           ><cite>
-            <a href="/v/19/blog/gpt">The role of generative AI in writing</a></cite
+            <a href="/v/19/blog/gpt"
+              >The role of generative AI in writing</a
+            ></cite
           ></strong
         >, an essay about the ways we could and shoudn&#8217;t use AI tooling in
         the context of high schools.
@@ -190,7 +199,9 @@
       <p>
         <strong
           ><cite>
-            <a href="/v/19/blog/web-sdk">The Web is the everything protocol</a></cite
+            <a href="/v/19/blog/web-sdk"
+              >The Web is the everything protocol</a
+            ></cite
           ></strong
         >, which expresses my frustrations with the state of the Web.
       </p>
@@ -198,12 +209,14 @@
       <p>
         I also
         <a
-          href="/v/19//www.linkedin.com/posts/somtoday_hoe-leuk-robin-boers-schreef-een-artikel-activity-6934511671432380416-TAed/">
+          href="//www.linkedin.com/posts/somtoday_hoe-leuk-robin-boers-schreef-een-artikel-activity-6934511671432380416-TAed/"
+        >
           got invited to Somtoday HQ
         </a>
         once, after I wrote a blogpost
         <a
-          href="/v/19//blog.geheimesite.nl/post/somtoday-ziet-er-niet-uit-maar-we-kunnen-het-oplossen-met-css">
+          href="//blog.geheimesite.nl/post/somtoday-ziet-er-niet-uit-maar-we-kunnen-het-oplossen-met-css"
+        >
           calling their UI ugly.
         </a>
       </p>
@@ -212,7 +225,7 @@
 
       <p>
         You can reach me via IRC, I&#8217;m often hanging out on
-        <a href="/v/19//libera.chat">Libera</a>; my nick is <b>axcelott</b>. You can
+        <a href="//libera.chat">Libera</a>; my nick is <b>axcelott</b>. You can
         also send me a friend request on Discord, my handle is
         <b>Axcelott#9914</b>.
       </p>
@@ -248,16 +261,16 @@
           <li><a href="/v/19/blog">Blog</a></li>
           <li><a href="/v/19/now">Now</a></li>
           <li><a href="/v/19/blogroll">Blogroll</a></li>
-          <li><a href="/v/19//school.geheimesite.nl">School</a></li>
+          <li><a href="//school.geheimesite.nl">School</a></li>
           <li><a href="/v/19/rss">Subscribe</a></li>
         </ul>
 
         <h3>work, art</h3>
 
         <ul>
-          <li><a href="/v/19//git.dupunkto.org">Code</a></li>
+          <li><a href="//git.dupunkto.org">Code</a></li>
           <li><a href="/v/19/projects">Projects</a></li>
-          <li><a href="/v/19//dupunkto.org">{du}punkto</a></li>
+          <li><a href="//dupunkto.org">{du}punkto</a></li>
           <li><a href="/v/19/r/place">r/place</a></li>
           <li><a href="/v/19/buttons">88 by 31</a></li>
           <li><a href="/v/19/resume">Resumé</a></li>
@@ -279,7 +292,7 @@
       Made with ♡ in the Netherlands. Copying is an act of love. Please copy.
 
       <blockquote cite="https://youtube.com/watch?v=6avJHaC3C2U">
-        <a href="/v/19//yewtu.be/watch?v=6avJHaC3C2U" target="_blank">
+        <a href="//yewtu.be/watch?v=6avJHaC3C2U" target="_blank">
           Code is poetry
         </a>
       </blockquote>
