--- a/v/19/projects.html
+++ b/v/19/projects.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,25 +11,33 @@
     <title>Projects</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
-    <link rel="canonical" href="https://classic.geheimesite.nl/v/19/stability" />
+    <link
+      rel="canonical"
+      href="https://classic.geheimesite.nl/v/19/stability"
+    />
 
     <style>
       table {
@@ -56,7 +64,7 @@
 
       <p>
         Here&#8217;s a selection of some of the stuff I&#8217;ve built. For the
-        rest, take a look on <a href="/v/19//git.dupunkto.org">{du}punkto</a>.
+        rest, take a look on <a href="//git.dupunkto.org">{du}punkto</a>.
       </p>
 
       <table class="h-feed projects">
@@ -69,7 +77,7 @@
         <tbody>
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/axcelott/signo">
+              <a class="u-url" href="//git.dupunkto.org/axcelott/signo">
                 Signo
               </a>
             </td>
@@ -81,21 +89,21 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/neopub/untitled">
+              <a class="u-url" href="//git.dupunkto.org/neopub/untitled">
                 Untitled
               </a>
             </td>
             <td>
               A yet-to-be-named project that explores ways to blend websites,
               social media and collaboration on the Web, by implementing an
-              <a href="/v/19//gilest.org/indie-easy.html">easy-to-use</a> website
+              <a href="//gilest.org/indie-easy.html">easy-to-use</a> website
               engine powered by various open standards.
             </td>
           </tr>
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/oblikvo"> Oblikvo </a>
+              <a class="u-url" href="//git.dupunkto.org/oblikvo"> Oblikvo </a>
             </td>
             <td>
               A browser-based 3D first-person shooter with old school graphics
@@ -105,7 +113,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/axcelott/hotfox">
+              <a class="u-url" href="//git.dupunkto.org/axcelott/hotfox">
                 Hotfox
               </a>
             </td>
@@ -117,7 +125,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/somtomorrow">
+              <a class="u-url" href="//git.dupunkto.org/somtomorrow">
                 Somtomorrow
               </a>
             </td>
@@ -134,7 +142,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/grape-lang">
+              <a class="u-url" href="//git.dupunkto.org/grape-lang">
                 The Grape Programming Language
               </a>
             </td>
@@ -150,7 +158,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/unlibrary">
+              <a class="u-url" href="//git.dupunkto.org/unlibrary">
                 Unlibrary
               </a>
             </td>
@@ -167,7 +175,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/axcelott/cutie-tanks">
+              <a class="u-url" href="//git.dupunkto.org/axcelott/cutie-tanks">
                 CutieTanks
               </a>
             </td>
@@ -179,7 +187,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/neopub"> neopub </a>
+              <a class="u-url" href="//git.dupunkto.org/neopub"> neopub </a>
             </td>
             <td>
               Self-hosted blogging platform for microblogs. Runs my microblog
@@ -190,7 +198,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/axcelott/VSKodium">
+              <a class="u-url" href="//git.dupunkto.org/axcelott/VSKodium">
                 VSKodium
               </a>
             </td>
@@ -203,7 +211,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/nindo"> Nindo </a>
+              <a class="u-url" href="//git.dupunkto.org/nindo"> Nindo </a>
             </td>
             <td>
               Numerous attempts I&#8217;ve made at building a social media
@@ -216,7 +224,8 @@
             <td class="p-title">
               <a
                 class="u-url"
-                href="/v/19//git.dupunkto.org/axcelott/js0.23-improved">
+                href="//git.dupunkto.org/axcelott/js0.23-improved"
+              >
                 js0.23-improved
               </a>
             </td>
@@ -229,7 +238,7 @@
 
           <tr class="h-entry">
             <td class="p-title">
-              <a class="u-url" href="/v/19//git.dupunkto.org/axcelott/fallen_world">
+              <a class="u-url" href="//git.dupunkto.org/axcelott/fallen_world">
                 fallen world
               </a>
             </td>
@@ -244,7 +253,8 @@
             <td class="p-title">
               <a
                 class="u-url"
-                href="/v/19//git.dupunkto.org/axcelott/MushroomHighlands">
+                href="//git.dupunkto.org/axcelott/MushroomHighlands"
+              >
                 Mushroom Highlands
               </a>
             </td>
@@ -259,7 +269,8 @@
             <td class="p-title">
               <a
                 class="u-url"
-                href="/v/19//git.dupunkto.org/axcelott/spaceshooter.js">
+                href="//git.dupunkto.org/axcelott/spaceshooter.js"
+              >
                 spaceshooter.js
               </a>
             </td>
