--- a/v/19/rss.html
+++ b/v/19/rss.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,23 +11,28 @@
     <title>What is RSS?</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://classic.geheimesite.nl/v/19/rss" />
 
@@ -110,7 +115,7 @@
       <p>
         To subscribe to an RSS feed, you use a newsreader app. There&#8217;s
         <a
-          href="/v/19//en.wikipedia.org/wiki/Comparison_of_feed_aggregators"
+          href="//en.wikipedia.org/wiki/Comparison_of_feed_aggregators"
           target="_blank"
           >lots of choices</a
         >
@@ -127,7 +132,7 @@
       <ul>
         <li>
           <p>
-            <a href="/v/19//inoreader.com" target="_blank">Inoreader</a>. Free up to
+            <a href="//inoreader.com" target="_blank">Inoreader</a>. Free up to
             150 subscriptions.<br />
             Offers iOS, iPadOS, and Android apps, and a web app.
           </p>
@@ -135,7 +140,7 @@
 
         <li>
           <p>
-            <a href="/v/19//newsblur.com" target="_blank">NewsBlur</a>. Free up to 64
+            <a href="//newsblur.com" target="_blank">NewsBlur</a>. Free up to 64
             subscriptions.<br />
             Offers iOS, iPadOS and Android apps, and a web app.
           </p>
@@ -143,7 +148,7 @@
 
         <li>
           <p>
-            <a href="/v/19//netnewswire.com" target="_blank">NetNewsWire</a>. Offers
+            <a href="//netnewswire.com" target="_blank">NetNewsWire</a>. Offers
             iOS, iPadOS and MacOS apps. The apps themselves are entirely free
             and don&#8217;t put limits on the amount of feeds. However, if you
             use an online service like Inoreader or NewsBlur to sync your
@@ -153,7 +158,7 @@
 
         <li>
           <p>
-            <a href="/v/19//theoldreader.com" target="_blank">The Old Reader</a>.
+            <a href="//theoldreader.com" target="_blank">The Old Reader</a>.
             Free up to 100 subscriptions.<br />
             Offers iOS and Android apps, and a web app. Contains ads.
           </p>
@@ -171,14 +176,16 @@
           version="1.1"
           style="vertical-align: text-bottom; width: 1.2em; height: 1.2em"
           class="pr-1"
-          viewBox="0 0 256 256">
+          viewBox="0 0 256 256"
+        >
           <defs>
             <linearGradient
               x1="0.085"
               y1="0.085"
               x2="0.915"
               y2="0.915"
-              id="RSSg">
+              id="RSSg"
+            >
               <stop offset="0.0" stop-color="#E3702D" />
               <stop offset="0.1071" stop-color="#EA7D31" />
               <stop offset="0.3503" stop-color="#F69537" />
@@ -195,7 +202,8 @@
             ry="55"
             x="0"
             y="0"
-            fill="#CC5D15" />
+            fill="#CC5D15"
+          />
           <rect
             width="246"
             height="246"
@@ -203,7 +211,8 @@
             ry="50"
             x="5"
             y="5"
-            fill="#F49C52" />
+            fill="#F49C52"
+          />
           <rect
             width="236"
             height="236"
@@ -211,14 +220,17 @@
             ry="47"
             x="10"
             y="10"
-            fill="url(#RSSg)" />
+            fill="url(#RSSg)"
+          />
           <circle cx="68" cy="189" r="24" fill="#FFF" />
           <path
             d="M160 213h-34a82 82 0 0 0 -82 -82v-34a116 116 0 0 1 116 116z"
-            fill="#FFF" />
+            fill="#FFF"
+          />
           <path
             d="M184 213A140 140 0 0 0 44 73 V 38a175 175 0 0 1 175 175z"
-            fill="#FFF" />
+            fill="#FFF"
+          />
         </svg>
         somewhere on the page. If they do, you can subscribe to them.
       </p>
@@ -247,8 +259,8 @@
 
       <p>Here are some starting points:</p>
       <ul>
-        <li><a href="/v/19//ooh.directory" target="_blank">ooh.directory</a></li>
-        <li><a href="/v/19//blogroll.org" target="_blank">blogroll.org</a></li>
+        <li><a href="//ooh.directory" target="_blank">ooh.directory</a></li>
+        <li><a href="//blogroll.org" target="_blank">blogroll.org</a></li>
         <li><a href="/v/19/blogroll">My blogroll</a></li>
       </ul>
 
@@ -256,8 +268,8 @@
         In addition to most blogs, lots of other sites also offer RSS feeds.
         Forexample, every YouTube channel has an RSS feed (try it: simply enter
         the channel URL in your RSS reader!). And most news sites (like
-        <a href="/v/19//nos.nl/feeds">NOS</a>) offer RSS feeds too, as do
-        <a href="/v/19//rss.buienradar.nl/radar.php">weather forecasts</a>.
+        <a href="//nos.nl/feeds">NOS</a>) offer RSS feeds too, as do
+        <a href="//rss.buienradar.nl/radar.php">weather forecasts</a>.
         Additionally, RSS is often used for podcasts too.
       </p>
 
@@ -299,7 +311,7 @@
       Made with ♡ in the Netherlands. Copying is an act of love. Please copy.
 
       <blockquote cite="https://youtube.com/watch?v=gd5uJ7Nlvvo">
-        <a href="/v/19//yewtu.be/watch?v=gd5uJ7Nlvvo" target="_blank">
+        <a href="//yewtu.be/watch?v=gd5uJ7Nlvvo" target="_blank">
           You know Pike Matchbox?
         </a>
       </blockquote>
