--- a/v/19/webdesign.html
+++ b/v/19/webdesign.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
@@ -11,25 +11,33 @@
     <title>Webdesign</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
-    <link rel="canonical" href="https://classic.geheimesite.nl/v/19/webdesign" />
+    <link
+      rel="canonical"
+      href="https://classic.geheimesite.nl/v/19/webdesign"
+    />
 
     <style>
       .h-entry {
@@ -54,8 +62,7 @@
         filter: grayscale(1); */
 
         border-radius: 5px;
-        box-shadow:
-          0 10px 15px -3px rgb(0 0 0/0.1),
+        box-shadow: 0 10px 15px -3px rgb(0 0 0/0.1),
           0 4px 6px -4px rgb(0 0 0/0.1);
       }
     </style>
@@ -82,19 +89,20 @@
           <h2 class="p-name">HVM Old&#8217;s Cool</h2>
           <p class="e-content p-summary">
             Educational website for the
-            <a href="/v/19//histvermaassluis.nl">Historische Vereniging Maassluis</a
+            <a href="//histvermaassluis.nl">Historische Vereniging Maassluis</a
             >. Includes pretty cool interactive examples.
           </p>
           <p>
-            <a href="/v/19//hvm-oldscool.nl" target="_blank" class="u-url">
+            <a href="//hvm-oldscool.nl" target="_blank" class="u-url">
               hvm-oldscool.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/hvm-oldscool.png"
-          alt="Screenshot of HVM Old's Cool" />
+          src="/v/19/images/websites/hvm-oldscool.png"
+          alt="Screenshot of HVM Old's Cool"
+        />
       </section>
 
       <section class="h-entry">
@@ -106,15 +114,16 @@
             <i>de Groentemeester</i>.
           </p>
           <p>
-            <a href="/v/19//degroentemeester.nl" target="_blank" class="u-url">
+            <a href="//degroentemeester.nl" target="_blank" class="u-url">
               degroentemeester.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/degroentemeester.png"
-          alt="Screenshot of De Groentemeester" />
+          src="/v/19/images/websites/degroentemeester.png"
+          alt="Screenshot of De Groentemeester"
+        />
       </section>
       <section class="h-entry">
         <div>
@@ -125,17 +134,19 @@
           </p>
           <p>
             <a
-              href="/v/19//jokessterrenkruid.blogspot.com"
+              href="//jokessterrenkruid.blogspot.com"
               target="_blank"
-              class="u-url">
+              class="u-url"
+            >
               jokessterrenkruid.blogspot.com
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/sterrenkruid.png"
-          alt="Screenshot of Sterrenkruid" />
+          src="/v/19/images/websites/sterrenkruid.png"
+          alt="Screenshot of Sterrenkruid"
+        />
       </section>
 
       <section class="h-entry">
@@ -143,20 +154,23 @@
           <h2 class="p-name">Sharefox</h2>
           <p class="e-content p-summary">
             Sharefox is a service that I built at
-            <a href="/v/19//qdentity.nl">Qdentity</a>. It&#8217;s a tool for
+            <a href="//qdentity.nl">Qdentity</a>. It&#8217;s a tool for
             exchanging sensitive information, such as passwords, financial
             documents, API keys and other confidential material. It has full
             end-to-end encryption and supports textual messages, as well as
             uploading files.
           </p>
           <p>
-            <a href="/v/19//sharefox.eu" target="_blank" class="u-url">
+            <a href="//sharefox.eu" target="_blank" class="u-url">
               sharefox.eu
             </a>
           </p>
         </div>
 
-        <img src="/images/websites/sharefox.png" alt="Screenshot of Sharefox" />
+        <img
+          src="/v/19/images/websites/sharefox.png"
+          alt="Screenshot of Sharefox"
+        />
       </section>
 
       <section class="h-entry">
@@ -168,15 +182,16 @@
             together.
           </p>
           <p>
-            <a href="/v/19//streekproeverijweij.nl" target="_blank" class="u-url">
+            <a href="//streekproeverijweij.nl" target="_blank" class="u-url">
               streekproeverijweij.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/streekproeverij-weij.png"
-          alt="Screenshot of Streekproeverij Weij" />
+          src="/v/19/images/websites/streekproeverij-weij.png"
+          alt="Screenshot of Streekproeverij Weij"
+        />
       </section>
 
       <section class="h-entry">
@@ -188,15 +203,16 @@
             transforming schoolyards in the past.
           </p>
           <p>
-            <a href="/v/19//groendoenerij.nl" target="_blank" class="u-url">
+            <a href="//groendoenerij.nl" target="_blank" class="u-url">
               groendoenerij.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/groendoenerij.png"
-          alt="Screenshot of Groendoenerij" />
+          src="/v/19/images/websites/groendoenerij.png"
+          alt="Screenshot of Groendoenerij"
+        />
       </section>
 
       <section class="h-entry">
@@ -206,15 +222,16 @@
             Website I built for a local Internet-radio station.
           </p>
           <p>
-            <a href="/v/19//powerradio010.nl" target="_blank" class="u-url">
+            <a href="//powerradio010.nl" target="_blank" class="u-url">
               powerradio010.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/powerradio010.png"
-          alt="Screenshot of Groendoenerij" />
+          src="/v/19/images/websites/powerradio010.png"
+          alt="Screenshot of Groendoenerij"
+        />
       </section>
 
       <section class="h-entry">
@@ -226,17 +243,19 @@
           </p>
           <p>
             <a
-              href="/v/19//grootmoedersdagboek.blogspot.com"
+              href="//grootmoedersdagboek.blogspot.com"
               target="_blank"
-              class="u-url">
+              class="u-url"
+            >
               grootmoedersdagboek.blogspot.com
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/grootmoedersdagboek.png"
-          alt="Screenshot of Dagboek van een Grootmoeder" />
+          src="/v/19/images/websites/grootmoedersdagboek.png"
+          alt="Screenshot of Dagboek van een Grootmoeder"
+        />
       </section>
 
       <!--<section class="h-entry">
@@ -247,7 +266,7 @@
           </p>
           <p>
             <a
-              href="/v/19//degroenejeroenen.nl"
+              href="//degroenejeroenen.nl"
               target="_blank"
               class="u-url"
             >
@@ -257,7 +276,7 @@
         </div>
 
         <img
-          src="/images/websites/groene-jeroenen.png"
+          src="/v/19/images/websites/groene-jeroenen.png"
           alt="Screenshot of De Groene Jeroenen"
         />
       </section>-->
@@ -270,15 +289,16 @@
             Maassluis, focussing on various themes related to sustainability.
           </p>
           <p>
-            <a href="/v/19//duurzamemaassluizers.nl" target="_blank" class="u-url">
+            <a href="//duurzamemaassluizers.nl" target="_blank" class="u-url">
               duurzamemaassluizers.nl
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/duurzame-maassluizers.png"
-          alt="Screenshot of Duurzame Maassluizers" />
+          src="/v/19/images/websites/duurzame-maassluizers.png"
+          alt="Screenshot of Duurzame Maassluizers"
+        />
       </section>
 
       <section class="h-entry">
@@ -290,17 +310,19 @@
           </p>
           <p>
             <a
-              href="/v/19//thesisevelineboers.blogspot.com"
+              href="//thesisevelineboers.blogspot.com"
               target="_blank"
-              class="u-url">
+              class="u-url"
+            >
               thesisevelineboers.blogspot.com
             </a>
           </p>
         </div>
 
         <img
-          src="/images/websites/thesis-eveline-boers.png"
-          alt="Screenshot of Thesis Eveline Boers" />
+          src="/v/19/images/websites/thesis-eveline-boers.png"
+          alt="Screenshot of Thesis Eveline Boers"
+        />
       </section>
     </main>
 
