--- a/v/19/colophon.html
+++ b/v/19/colophon.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,23 +11,28 @@
     <title>Colophon</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://classic.geheimesite.nl/v/19/colophon" />
   </head>
@@ -49,10 +54,10 @@
 
       <p>
         Everything on this site is released into the
-        <a href="/v/19//stpeter.im/writings/essays/publicdomain.html">
+        <a href="//stpeter.im/writings/essays/publicdomain.html">
           public domain</a
         >. The
-        <a href="/v/19//git.dupunkto.org/sites/roblog.nl">source code</a>
+        <a href="//git.dupunkto.org/sites/roblog.nl">source code</a>
         is also publicly available and licensed AGPLv3.
       </p>
 
@@ -66,7 +71,7 @@
 
       <p>
         For a full breakdown of how my site was build, see
-        <a href="/v/19//github.com/RobinBoers/roblog.nl#readme">the README</a>.
+        <a href="//github.com/RobinBoers/roblog.nl#readme">the README</a>.
       </p>
     </main>
 
