--- a/v/19/netmap.html
+++ b/v/19/netmap.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,23 +11,28 @@
     <title>Netmap</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://classic.geheimesite.nl/v/19/netmap" />
 
@@ -49,7 +54,7 @@
 
       <p>
         Most sites have some sort of
-        <a href="/v/19//en.wikipedia.org/wiki/Site_map">Sitemap</a>. A big document
+        <a href="//en.wikipedia.org/wiki/Site_map">Sitemap</a>. A big document
         or list containing a bunch of links to a bunch of pages on the site.
         <!-- SEO engineers will tell you to make one <em>bECaUsE yOU WiLl rANk HiGhEr</em>. -->
         If you&#8217;re looking for my sitemap, well sucks to be you, because
@@ -75,29 +80,29 @@
       <ul>
         <li>Roblog (this site)</li>
         <li>
-          <a href="/v/19//dupunkto.org">dupunkto.org</a>: a pubnix/tilde that
+          <a href="//dupunkto.org">dupunkto.org</a>: a pubnix/tilde that
           I&#8217;m co-maintaining.
         </li>
         <li>
-          <a href="/v/19//git.dupunkto.org">git.dupunkto.org</a>: git hosting for
+          <a href="//git.dupunkto.org">git.dupunkto.org</a>: git hosting for
           dupunkto members.
         </li>
         <li>
-          <a href="/v/19//ftp.dupunkto.org">ftp.dupunkto.org</a>: file sharing for
+          <a href="//ftp.dupunkto.org">ftp.dupunkto.org</a>: file sharing for
           dupunkto members.
         </li>
         <li>
-          <a href="/v/19//school.geheimesite.nl">school.geheimesite.nl</a>: a website
+          <a href="//school.geheimesite.nl">school.geheimesite.nl</a>: a website
           with a bunch of study materials I made for my classmates.
         </li>
         <li>
-          <a href="/v/19//classic.geheimesite.nl">classic.geheimesite.nl</a>: a
+          <a href="//classic.geheimesite.nl">classic.geheimesite.nl</a>: a
           public archive of older versions of this website; a private Wayback
           machine if you will.
         </li>
         <li>
-          <a href="/v/19//sharefox.geheimesite.nl">sharefox.geheimesite.nl</a>: my
-          public <a href="/v/19//sharefox.eu">Sharefox</a> inbox for receiving
+          <a href="//sharefox.geheimesite.nl">sharefox.geheimesite.nl</a>: my
+          public <a href="//sharefox.eu">Sharefox</a> inbox for receiving
           encrypted messages.
         </li>
       </ul>
@@ -106,20 +111,20 @@
 
       <ul>
         <li>
-          <a href="/v/19//blog.geheimesite.nl">blog.geheimesite.nl</a>: public
+          <a href="//blog.geheimesite.nl">blog.geheimesite.nl</a>: public
           archive of all content on my old (Blogger) blog, from before I
           migrated the posts to my own site.
         </li>
         <li>
-          <a href="/v/19//micro.geheimesite.nl">micro.geheimesite.nl</a>: public
+          <a href="//micro.geheimesite.nl">micro.geheimesite.nl</a>: public
           archive of my short-lived microblog running on my own DIY blogging
           software called
-          <a href="/v/19//git.dupunkto.org/~axcelott/neopub">neopub</a>.
+          <a href="//git.dupunkto.org/~axcelott/neopub">neopub</a>.
         </li>
         <li>
-          <a href="/v/19//nindo.geheimesite.nl">nindo.geheimesite.nl</a>: public
+          <a href="//nindo.geheimesite.nl">nindo.geheimesite.nl</a>: public
           archive of all
-          <a href="/v/19//git.dupunkto.org/~axcelott/nindo">Nindo</a> content posted
+          <a href="//git.dupunkto.org/~axcelott/nindo">Nindo</a> content posted
           before I killed the project.
         </li>
       </ul>
@@ -149,7 +154,7 @@
         </li>
         <li>
           <a>chat.geheimesite.nl</a>: former official instance of my
-          <a href="/v/19//github.com/RobinBoers/thinkchat" target="_blank"
+          <a href="//github.com/RobinBoers/thinkchat" target="_blank"
             >ThinkChat</a
           >
           project.
@@ -165,7 +170,7 @@
       Made with ♡ in the Netherlands. Copying is an act of love. Please copy.
 
       <blockquote cite="https://youtube.com/watch?v=LpxT9TLGoLI">
-        <a href="/v/19//yewtu.be/watch?v=LpxT9TLGoLI" target="_blank">
+        <a href="//yewtu.be/watch?v=LpxT9TLGoLI" target="_blank">
           And the real tragedy is half of it was true
         </a>
       </blockquote>
