--- a/v/19/now.html
+++ b/v/19/now.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,23 +11,28 @@
     <title>Now</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://classic.geheimesite.nl/v/19/now" />
   </head>
@@ -85,7 +90,9 @@
           >for merging two-factor authentication into
           <code>phx.gen.auth</code></a
         >. I&#8217;m also building
-        <a href="/v/19/blog/challenge-accepted">an experimantal website engine</a>
+        <a href="/v/19/blog/challenge-accepted"
+          >an experimantal website engine</a
+        >
         that blends multiple layers of the Web.
       </p>
 
@@ -106,10 +113,10 @@
 
       <p>
         I&#8217;ve shelved
-        <a href="/v/19//git.dupunkto.org/grape-lang"
+        <a href="//git.dupunkto.org/grape-lang"
           >The Grape Programming Language</a
         >
-        and <a href="/v/19//git.dupunkto.org/somtomorrow">Somtomorrow</a>, but do
+        and <a href="//git.dupunkto.org/somtomorrow">Somtomorrow</a>, but do
         intend to finish them sometime the upcoming years.
       </p>
     </main>
@@ -118,7 +125,8 @@
       Made with ♡ in the Netherlands. Copying is an act of love. Please copy.
 
       <blockquote
-        cite="https://en.wikipedia.org/wiki/All_the_world%27s_a_stage">
+        cite="https://en.wikipedia.org/wiki/All_the_world%27s_a_stage"
+      >
         All the world&#8217;s indeed a stage and we are merely players
       </blockquote>
     </footer>
