--- a/v/19/resume.html
+++ b/v/19/resume.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,23 +11,28 @@
     <title>Resumé</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
     <link rel="canonical" href="https://classic.geheimesite.nl/v/19/resume" />
 
@@ -74,7 +79,7 @@
 
       <p>
         I can work with WordPress, but I&#8217;d rather use a
-        <a href="/v/19//en.wikipedia.org/wiki/Static_site_generator">
+        <a href="//en.wikipedia.org/wiki/Static_site_generator">
           Static Site Generator.
         </a>
       </p>
@@ -106,7 +111,7 @@
       <p>
         At Qdentity, I worked with Elixir, Phoenix Framework and tailwindcss and
         I built
-        <a href="/v/19//sharefox.eu">Sharefox</a> and some other internal APIs.
+        <a href="//sharefox.eu">Sharefox</a> and some other internal APIs.
       </p>
 
       <p>
