--- a/v/19/stability.html
+++ b/v/19/stability.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,25 +11,33 @@
     <title>This website is volatile</title>
     <link
       rel="stylesheet"
-      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca" />
+      href="/v/19/main.css?v=1aea3434b9359fd229c0b8a9d7d95eca"
+    />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="lil notes (RSS)"
-      href="https://classic.geheimesite.nl/v/19/index.xml" />
+      href="https://classic.geheimesite.nl/v/19/index.xml"
+    />
     <link
       rel="alternate"
       type="application/atom+xml"
       title="lil notes (Atom)"
-      href="https://classic.geheimesite.nl/v/19/atom.xml" />
+      href="https://classic.geheimesite.nl/v/19/atom.xml"
+    />
     <link
       rel="license"
-      href="https://creativecommons.org/publicdomain/zero/1.0/" />
+      href="https://creativecommons.org/publicdomain/zero/1.0/"
+    />
     <link
       rel="pingback"
-      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions" />
+      href="https://webmention.io/webmention?forward=https://api.geheimesite.nl/webmentions"
+    />
     <link rel="webmention" href="https://api.geheimesite.nl/webmentions" />
-    <link rel="canonical" href="https://classic.geheimesite.nl/v/19/stability" />
+    <link
+      rel="canonical"
+      href="https://classic.geheimesite.nl/v/19/stability"
+    />
   </head>
   <body>
     <header>
@@ -43,7 +51,7 @@
         This website (everything residing on &#8220;roblog.nl&#8221; and
         previously &#8220;geheimesite.nl&#8221;, excluding subdomains) is
         volatile. It can, and will, change.
-        <a href="/v/19//www.w3.org/Provider/Style/URI">My URLs aren&#8217;t cool</a>,
+        <a href="//www.w3.org/Provider/Style/URI">My URLs aren&#8217;t cool</a>,
         sorry! Attempts to link to this site are futile.
       </p>
 
@@ -57,8 +65,8 @@
       <p>
         If you do want to link to something and be confident that the link
         won&#8217;t die, please link to the appropriate page in
-        <a href="/v/19/the-archives">The Archives</a>. I am committed to keeping the
-        URL schemes of <a>classic.geheimesite.nl</a> and
+        <a href="/v/19/the-archives">The Archives</a>. I am committed to keeping
+        the URL schemes of <a>classic.geheimesite.nl</a> and
         <a>blog.geheimesite.nl</a> stable.
       </p>
 
