--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <style>
       body {
         max-width: 750px;
+        padding: 7px;
         margin: 4em auto;
         min-height: fit-content;
       }
