Update name of current version

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <li>
           <details>
             <summary>
-              <a href="//geheimesite.nl">20: Keep It Simple, Stupid!</a> (current version)
+              <a href="//geheimesite.nl">20: Monochrome minimalism</a> (current version)
             </summary>
             <p>
               The previous version of my site was just <em>fine</em>. The HTML was
@@ -328,9 +328,7 @@
             <p>
               This is not that rewrite. I decided halfway thru development that I wanted to split
               my online presence into a "professional"/public site, and a more private, vulnerable
-              site. Since the "professional" site didn't need much updating anyway, I kept it as-is,
-              but rewrote most of the pages to be more up-to-date. Let's see how long this version
-              will last ;)
+              site. My "professional" site is mostly static text anyway, so I'm still just handwriting HTML. <3
             </p>
           </details>
         </li>
