Add missing  `target="_blank"` to some URLs

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <li>
           <details>
             <summary>
-              <a href="/v/19">19: art?</a>
+              <a href="/v/19" target="_blank">19: art?</a>
             </summary>
             <p>
               While I was very pleased with the previous interation of my site,
@@ -307,7 +307,7 @@
         <li>
           <details>
             <summary>
-              <a href="//geheimesite.nl">20: Monochrome minimalism</a> (current version)
+              <a href="//geheimesite.nl" target="_blank">20: Monochrome minimalism</a> (current version)
             </summary>
             <p>
               The previous version of my site was just <em>fine</em>. The HTML was
